--- a/auto-cache-from/docker-compose.yml
+++ b/auto-cache-from/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.2"
 services:
   web:
-    image: pchico83/ci
+    image: antoniohernan/ci
     build:
       cache_from:
-        - pchico83/ci
+        - antoniohernan/ci
       context: .
     depends_on:
       - redis
